#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata Macros"
name = "td-macros"
edition = "2021"
build = "build.rs"

[workspace.package]
authors = [
    "Aleix Lascorz Guiu   (tabsleix)   <aleix@tabsdata.com>",
    "Alejandro Abdelnur   (tucu0)      <tucu@tabsdata.com>",
    "Arvind Prabhakar     (aptabs)     <arvind@tabsdata.com>",
    "David Sánchez Frías  (tabsdavid)  <david@tabsdata.com>",
    "Dimas Cabré i Chacón (aoinokimi)  <dragon@tabsdata.com>",
    "Joaquín Bo Díaz      (joaquin041) <joaquin@tabsdata.com>"
]
edition = "2021"
homepage = "https://www.tabsdata.com"
license = ""
publish = false
readme = "../README.md"
repository = "https://github.com/tabsdata/tabsdata"
rust-version = "1.85.0"
version = "0.9.3"

[workspace]
members = [
    "helpers/td-shared",
    "facets/td-apiforge",
    "facets/td-attach",
    "facets/td-concrete",
    "facets/tm-error",
    "facets/td-type",
    "facets/tm-workspace"
]

[[bin]]
name = "auto"
path = "auto.rs"

[profile.integration]
inherits = "release"
codegen-units = 16
incremental = true
lto = false
opt-level = 0

[profile.assembly]
inherits = "release"
codegen-units = 1
debug = 0
incremental = false
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "debuginfo"

[package.metadata.cargo-machete]
ignored = ["td-interceptor-api"]

[features]

td-test = ["dummy"]
dummy = []

# Internal dependencies

## Libraries

[workspace.dependencies.td-build]
path = "../devutils/automation/tasks/cargo/td-build"

[workspace.dependencies.td-apiforge]
path = "facets/td-apiforge"

[workspace.dependencies.td-concrete]
path = "facets/td-concrete"

[workspace.dependencies.td-shared]
path = "helpers/td-shared"

[workspace.dependencies.tm-error]
path = "facets/tm-error"

# External dependencies

[workspace.dependencies.axum]
version = "0.8.1"

[workspace.dependencies.chrono]
version = "0.4.39"

[workspace.dependencies.darling]
version = "0.20.10"

[workspace.dependencies.derive_builder]
version = "0.20.2"

[workspace.dependencies.duct]
version = "0.13"

[workspace.dependencies.getset]
version = "0.1.4"

[workspace.dependencies.heck]
version = "0.5.0"

[workspace.dependencies.http]
version = "1.2.0"

[workspace.dependencies.lazy_static]
version = "1.5.0"

[workspace.dependencies.openssl]
version = "0.10.70"
features = ["vendored"]

[workspace.dependencies.paste]
version = "1.0.15"

[workspace.dependencies.proc-macro-crate]
version = "3.2.0"

[workspace.dependencies.proc-macro2]
version = "1.0.93"

[workspace.dependencies.quote]
version = "1.0.38"

[workspace.dependencies.regex]
version = "1.11.1"

[workspace.dependencies.serde]
version = "1.0.217"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.138"

[workspace.dependencies.sqlx]
version = "0.8.3"
features = ["sqlite", "runtime-tokio", "macros", "chrono"]

[workspace.dependencies.strum]
version = "0.27.1"

[workspace.dependencies.strum_macros]
version = "0.27.1"

[workspace.dependencies.syn]
version = "2.0.98"
features = ["full"]

[workspace.dependencies.tokio]
version = "1.43.0"

[workspace.dependencies.thiserror]
version = "2.0.11"

[workspace.dependencies.utoipa]
version = "5.3.1"
features = ["axum_extras", "preserve_order"]

[workspace.dependencies.walkdir]
version = "2.5.0"

[build-dependencies]

# Internal dependencies

td-build = { workspace = true }