#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata Macros"
name = "td-macros"
edition = "2021"
version = "0.9.7"
license = "Apache 2.0"
build = "build.rs"

[workspace.package]
authors = [
    "Aleix Lascorz Guiu   (tabsleix)   <aleix@tabsdata.com>",
    "Alejandro Abdelnur   (tucu0)      <tucu@tabsdata.com>",
    "Arvind Prabhakar     (aptabs)     <arvind@tabsdata.com>",
    "David Sánchez Frías  (tabsdavid)  <david@tabsdata.com>",
    "Dimas Cabré i Chacón (aoinokimi)  <dragon@tabsdata.com>",
    "Joaquín Bo Díaz      (joaquin041) <joaquin@tabsdata.com>"
]
edition = "2021"
homepage = "https://www.tabsdata.com"
license = "Apache 2.0"
publish = false
readme = "../README.md"
repository = "https://github.com/tabsdata/tabsdata"
rust-version = "1.88.0"
version = "0.9.7"

[workspace]
members = [
    "helpers/td-shared",
    "facets/td-apiforge",
    "facets/td-attach",
    "facets/td-concrete",
    "facets/td-type",
    "facets/tm-error",
    "facets/tm-test",
    "facets/tm-tower",
    "facets/tm-workspace"
]

[[bin]]
name = "auto"
path = "auto.rs"

[profile.dev]
codegen-units = 4096
debug = true
incremental = true
lto = "off"
opt-level = 0
panic = "unwind"
strip = "none"

[profile.integration]
inherits = "release"
codegen-units = 16
incremental = true
lto = false
opt-level = 0

[profile.assembly]
inherits = "release"
codegen-units = 1
debug = 0
incremental = false
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "debuginfo"

[package.metadata.cargo-machete]
ignored = ["openssl", "toml", "ta-tableframe"]

[features]

td-test = ["dummy"]
dummy = []

# Internal dependencies

## Libraries

[workspace.dependencies.td-build]
path = "../devutils/automation/tasks/cargo/td-build"

[workspace.dependencies.td-apiforge]
path = "facets/td-apiforge"

[workspace.dependencies.td-concrete]
path = "facets/td-concrete"

[workspace.dependencies.td-shared]
path = "helpers/td-shared"

[workspace.dependencies.tm-error]
path = "facets/tm-error"

# External dependencies

[workspace.dependencies.axum]
version = "0.8.4"

[workspace.dependencies.chrono]
version = "0.4.41"

[workspace.dependencies.darling]
version = "0.20.11"

[workspace.dependencies.derive_builder]
version = "0.20.2"

[workspace.dependencies.duct]
version = "0.13.7"

[workspace.dependencies.getset]
version = "0.1.6"

[workspace.dependencies.heck]
version = "0.5.0"

[workspace.dependencies.http]
version = "1.3.1"

[workspace.dependencies.lazy_static]
version = "1.5.0"

[workspace.dependencies.openssl]
version = "0.10.73"
features = ["vendored"]

[workspace.dependencies.paste]
version = "1.0.15"

[workspace.dependencies.proc-macro-crate]
version = "3.3.0"

[workspace.dependencies.proc-macro2]
version = "1.0.95"

[workspace.dependencies.quote]
version = "1.0.40"

[workspace.dependencies.rand]
version = "0.9.1"

[workspace.dependencies.regex]
version = "1.11.1"

[workspace.dependencies.serde]
version = "1.0.219"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.140"

[workspace.dependencies.sqlx]
version = "0.8.6"
features = ["sqlite", "runtime-tokio", "macros", "chrono"]

[workspace.dependencies.strum]
version = "0.27.1"
features = ["derive"]

[workspace.dependencies.syn]
version = "2.0.104"
features = ["full"]

[workspace.dependencies.tokio]
version = "1.46.0"

[workspace.dependencies.toml]
version = "0.8.23"

[workspace.dependencies.thiserror]
version = "2.0.12"

[workspace.dependencies.utoipa]
version = "5.4.0"
features = ["axum_extras", "preserve_order"]

[workspace.dependencies.walkdir]
version = "2.5.0"

[build-dependencies]

# Internal dependencies

td-build = { workspace = true }

# External dependencies

toml = { workspace = true }

[dependencies]

# External dependencies

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }

# Version 0.17.12 has been flagged as yanked, but we cannot easily downgrade to version 0.17.11.
[patch.crates-io]
indicatif = { git = "https://github.com/console-rs/indicatif.git", tag = "0.17.12" }
