#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata Macros"
name = "td-macros"
edition = "2021"
version = "1.3.0"
license = "Apache 2.0"
build = "build.rs"

[workspace.package]
authors = [
    "Aleix Lascorz Guiu   (tabsleix)   <aleix@tabsdata.com>",
    "Alejandro Abdelnur   (tucu0)      <tucu@tabsdata.com>",
    "Arvind Prabhakar     (aptabs)     <arvind@tabsdata.com>",
    "David Sánchez Frías  (tabsdavid)  <david@tabsdata.com>",
    "Dimas Cabré i Chacón (aoinokimi)  <dragon@tabsdata.com>",
    "Joaquín Bo Díaz      (joaquin041) <joaquin@tabsdata.com>"
]
edition = "2021"
homepage = "https://www.tabsdata.com"
license = "Apache 2.0"
publish = false
readme = "../README.md"
repository = "https://github.com/tabsdata/tabsdata"
rust-version = "1.88.0"
version = "1.3.0"

[workspace]
members = [
    "helpers/td-shared",
    "facets/td-apiforge",
    "facets/td-attach",
    "facets/td-type",
    "facets/tm-error",
    "facets/tm-test",
    "facets/tm-tower",
    "facets/tm-workspace"
]

[[bin]]
name = "auto"
path = "auto.rs"

[profile.dev]
codegen-units = 4096
debug = true
incremental = true
lto = "off"
opt-level = 0
panic = "unwind"
strip = "none"

[profile.integration]
inherits = "release"
codegen-units = 16
incremental = true
lto = false
opt-level = 0

[profile.assembly]
inherits = "release"
codegen-units = 1
debug = 0
incremental = false
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "debuginfo"

[package.metadata.cargo-machete]
ignored = ["openssl", "toml", "ta-tableframe"]

[features]

td-test = ["dummy"]
dummy = []

# Internal dependencies

## Libraries

[workspace.dependencies.td-build]
path = "../devutils/automation/tasks/cargo/td-build"

[workspace.dependencies.td-shared]
path = "helpers/td-shared"

# External dependencies

[workspace.dependencies.axum]
version = "0.8.4"

[workspace.dependencies.darling]
version = "0.21.2"

[workspace.dependencies.derive_builder]
version = "0.20.2"

[workspace.dependencies.duct]
version = "1.1.0"

[workspace.dependencies.getset]
version = "0.1.6"

[workspace.dependencies.openssl]
version = "0.10.73"
features = ["vendored"]

[workspace.dependencies.proc-macro-crate]
version = "3.3.0"

[workspace.dependencies.proc-macro2]
version = "1.0.101"

[workspace.dependencies.quote]
version = "1.0.40"

[workspace.dependencies.rand]
version = "0.9.2"

[workspace.dependencies.serde]
version = "1.0.219"
features = ["derive"]

[workspace.dependencies.syn]
version = "2.0.106"
features = ["full"]

[workspace.dependencies.toml]
version = "0.9.5"

[workspace.dependencies.utoipa]
version = "5.4.0"
features = ["axum_extras", "preserve_order"]

[workspace.dependencies.walkdir]
version = "2.5.0"

[build-dependencies]

# Internal dependencies

td-build = { workspace = true }

# External dependencies

[dependencies]

# External dependencies

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
