#
# Copyright 2025 Tabs Data Inc.
#

[package]
description = "Tabsdata Rust Polars Expansions"
name = "ty-expansions"
edition = "2024"
version = "1.3.0"
license = "Apache 2.0"
build = "build.rs"

[workspace.package]
authors = [
    "Aleix Lascorz Guiu   (tabsleix)   <aleix@tabsdata.com>",
    "Alejandro Abdelnur   (tucu0)      <tucu@tabsdata.com>",
    "Arvind Prabhakar     (aptabs)     <arvind@tabsdata.com>",
    "David Sánchez Frías  (tabsdavid)  <david@tabsdata.com>",
    "Dimas Cabré i Chacón (aoinokimi)  <dragon@tabsdata.com>",
    "Joaquín Bo Díaz      (joaquin041) <joaquin@tabsdata.com>"
]
edition = "2024"
homepage = "https://www.tabsdata.com"
license = "Apache 2.0"
publish = false
readme = "../../README.md"
repository = "https://github.com/tabsdata/tabsdata"
rust-version = "1.89.0"
version = "1.3.0"

[workspace]
members = [
    "./modules/ty-tableframe",
]

[[bin]]
name = "auto"
path = "auto.rs"

[profile.dev]
codegen-units = 4096
debug = true
incremental = true
lto = "off"
opt-level = 0
panic = "unwind"
strip = "none"

[profile.integration]
inherits = "release"
codegen-units = 16
incremental = true
lto = false
opt-level = 0

[profile.assembly]
inherits = "release"
codegen-units = 1
debug = 0
incremental = false
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "debuginfo"

[package.metadata.cargo-machete]
ignored = ["openssl", "toml", "ta-tableframe", "td-build", "te-tableframe"]

[features]

# This feature enbles enterprise functionalities not available in the standard implementation.
# It should be normally used only for cross-crates tests.
enterprise = []

td-test = ["dummy"]
dummy = []

# Internal dependencies

## Libraries

[workspace.dependencies.td-build]
path = "../../devutils/automation/tasks/cargo/td-build"

[workspace.dependencies.td-common]
path = "../../server/libraries/td-common"

[workspace.dependencies.td-error]
path = "../../server/libraries/td-error"

[workspace.dependencies.ta-tableframe]
path = "../../server/libraries/ta-tableframe"

[workspace.dependencies.te-tableframe]
path = "../../extensions/rust/te-tableframe"

# External dependencies

# As the links below show, this is a necessary workaround until the aliasing of polars-arrow is
# better encapsulated in polars.
# https://github.com/pola-rs/polars/issues/23902
# https://github.com/pola-rs/polars/pull/23918

[workspace.dependencies.arrow]
package = "polars-arrow"
version = "0.50.0"

[workspace.dependencies.chrono]
version = "0.4.41"

[workspace.dependencies.dashmap]
version = "6.1.0"

[workspace.dependencies.data-encoding]
version = "2.9.0"

[workspace.dependencies.grok]
version = "2.4.0"

[workspace.dependencies.indexmap]
version = "2.11.0"

[workspace.dependencies.openssl]
version = "0.10.73"
features = ["vendored"]

[workspace.dependencies.polars]
version = "0.50.0"
features = ["default", "fmt", "dtype-date", "dtype-struct", "timezones"]

[workspace.dependencies.polars-plan]
version = "0.50.0"
features = ["python"]

[workspace.dependencies.polars-mem-engine]
version = "0.50.0"
features = ["python"]

# Note: Each pyo3-polars is tightly tied to a specific version of pyo3.
# Pay attention to these any time you intend to upgrade pyo3 dependency version.

[workspace.dependencies.pyo3]
version = "0.25.1"
features = ["abi3-py312", "anyhow", "macros", "multiple-pymethods", "num-bigint", "num-complex", "num-rational", "rust_decimal", "serde", "smallvec"]

[workspace.dependencies.pyo3-polars]
version = "0.23.1"
features = ["derive"]

[workspace.dependencies.pyo3-stub-gen]
version = "0.13.1"

[workspace.dependencies.pyo3-stub-gen-derive]
version = "0.13.1"

[workspace.dependencies.rayon]
version = "1.11.0"

[workspace.dependencies.serde]
version = "1.0.219"
features = ["derive"]

[workspace.dependencies.toml]
version = "0.9.5"

[workspace.dependencies.tracing]
version = "0.1.41"

[workspace.dependencies.tracing-subscriber]
version = "0.3.20"

[workspace.dependencies.uuid]
version = "1.18.0"
features = ["v7"]

[workspace.dependencies.uuid7]
version = "1.1.0"

[build-dependencies]

# Internal dependencies

td-build = { workspace = true }

# External dependencies

toml = { workspace = true }

[dependencies]

# Internal dependencies

## Libraries

te-tableframe = { workspace = true }
ta-tableframe = { workspace = true }

# External dependencies

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
