#
# Copyright 2025 Tabs Data Inc.
#

[build-system]
requires = ["psutil>=7.0", "setuptools==78.0.2"]
build-backend = "setuptools.build_meta"

[tool.flake8]
exclude = ["*.pyi"]

[tool.black]
line-length = 88
preview = true
extend-exclude = '\.pyi$'
enable-unstable-feature = ["string_processing"]

[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

[tool.isort]
profile = "black"
skip_glob = ["*.pyi"]
known_first_party = [
    "tabsdata",
    "tabsdata_agent",
    "tabsdata_databricks",
    "tabsdata_mongodb",
    "tabsdata_mssql",
    "tabsdata_salesforce",
    "tabsdata_snowflake",
    "ta_features",
    "ta_tableframe",
    "td_sdk",
    "te_examples",
    "te_tableframe",
    "tests_ta_features",
    "tests_ta_tableframe",
    "tests_tabsdata",
    "tests_te_examples",
    "tests_te_tableframe",
    "tests_ty_tableframe",
    "ty_tableframe",
]
known_third_party = ["docker"]
skip = ["docker/"]

[tool.licensecheck]
using = "requirements:requirements.txt"