#
# Copyright 2025 Tabs Data Inc.
#

[package]
description = "Tabsdata Execution Extension Implementation - Standard"
name = "te-execution"
build = "build.rs"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]

[features]

enterprise = []
td-test = ["dummy", "mock-env", "test-utils"]
dummy = []
mock-env = []
test-utils = []

[package.metadata.cargo-machete]
ignored = ["openssl"]

[dependencies]

# Internal dependencies

ta-execution = { workspace = true }
td-error = { workspace = true }
td-objects = { workspace = true }

# External dependencies

async-trait = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true, features = ["derive"] }
strum = { workspace = true }
strum_macros = { workspace = true }

# Development dependencies

[dev-dependencies]
ta-execution = { workspace = true, features = ["td-test"] }
td-objects = { workspace = true, features = ["td-test"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }