#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata TableFrame Extension Implementation - Open Source"
name = "te-tableframe"
build = "build.rs"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]

[features]
enterprise = []
td-test = ["dummy", "mock-env", "test-utils"]
dummy = []
mock-env = []
test_logging = []
test_tower_metadata = []
test-utils = []

[package.metadata.cargo-machete]
ignored = ["openssl", "td-common"]

[dependencies]

# Internal dependencies

ta-tableframe = { workspace = true }

# External dependencies

[dev-dependencies]
ta-tableframe = { workspace = true, features = ["td-test"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
