#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata Api Server Automations Macro"
edition = { workspace = true }
name = "td-apiforge"
publish = false
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
proc-macro = true

[package.metadata.cargo-machete]
ignored = ["openssl"]

[features]

td-test = ["dummy"]
dummy = []

[dependencies]

# Internal dependencies

## Libraries

td-concrete = { workspace = true }
td-shared = { workspace = true }

# External dependencies

axum = { workspace = true }
darling = { workspace = true }
derive_builder = { workspace = true }
getset = { workspace = true }
heck = { workspace = true }
http = { workspace = true }
paste = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
syn = { workspace = true, features = ["full", "visit"] }
utoipa = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
