#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata Api Server Automations Macro"
name = "td-apiforge"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
proc-macro = true

[package.metadata.cargo-machete]
ignored = ["openssl"]

[features]

td-test = ["dummy"]
dummy = []

[dependencies]

# Internal dependencies

## Libraries

td-shared = { workspace = true }

# External dependencies

axum = { workspace = true }
darling = { workspace = true }
derive_builder = { workspace = true }
getset = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true, features = ["derive"] }
syn = { workspace = true, features = ["full", "visit"] }
utoipa = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
