#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata Concrete Types Generation Macro"
edition = { workspace = true }
name = "td-concrete"
publish = false
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
proc-macro = true

[package.metadata.cargo-machete]
ignored = ["openssl"]

[features]

td-test = ["dummy"]
dummy = []

[dependencies]

# Internal dependencies

## Libraries

td-shared = { workspace = true }

# External dependencies

darling = { workspace = true }
derive_builder = { workspace = true }
getset = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "visit"] }
walkdir = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
