#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata Typing Utilities Macro"
edition = { workspace = true }
name = "td-type"
publish = false
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
proc-macro = true

[package.metadata.cargo-machete]
ignored = ["openssl", "utoipa"]

[features]

td-test = ["dummy"]
dummy = []

[dependencies]

# Internal dependencies

td-apiforge = { workspace = true }

# External dependencies

chrono = { workspace = true, features = ["serde"] }
darling = { workspace = true }
derive_builder = { workspace = true }
getset = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
syn = { workspace = true, features = ["full"] }
utoipa = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
