#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata Typing Utilities Macro"
name = "td-type"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
proc-macro = true

[package.metadata.cargo-machete]
ignored = ["openssl", "strum", "strum_macros", "thiserror"]

[features]

td-test = ["dummy"]
dummy = []

[dependencies]

# Internal dependencies

td-apiforge = { workspace = true }
td-shared = { workspace = true }

# External dependencies

chrono = { workspace = true, features = ["serde"] }
darling = { workspace = true }
derive_builder = { workspace = true }
getset = { workspace = true }
lazy_static = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio", "macros", "chrono"] }
strum = { workspace = true }
strum_macros = { workspace = true }
syn = { workspace = true, features = ["full"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
utoipa = { workspace = true, features = ["uuid"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
