#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata Typing Utilities Macros"
name = "td-type"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]
proc-macro = true

[package.metadata.cargo-machete]
ignored = ["openssl", "strum", "strum_macros", "thiserror"]

[features]

td-test = ["dummy"]
dummy = []

[dependencies]

# Internal dependencies

td-shared = { workspace = true }

# External dependencies

darling = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
