#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata to Instrospect Workspace Metadata"
edition = { workspace = true }
name = "tm-workspace"
publish = false
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]
proc-macro = true

[package.metadata.cargo-machete]
ignored = ["openssl"]

[features]

td-test = ["dummy"]
dummy = []

[dependencies]

# Internal dependencies

## Libraries

# External dependencies

quote = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
