#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Shared components for all macro projects"
edition = { workspace = true }
name = "td-shared"
publish = false
rust-version = { workspace = true }
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[lib]

[package.metadata.cargo-machete]
ignored = ["openssl"]

[features]

td-test = ["dummy"]
dummy = []

[dependencies]

# Internal dependencies

# External dependencies

darling = { workspace = true }
duct = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }
