#
# Copyright 2024 Tabs Data Inc.
#

[package]
description = "Tabsdata Transaction Interceptor Plugin Implementation - Standard"
name = "td-transaction-interceptor"
build = "build.rs"

authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
version = { workspace = true }

[lib]

[features]

enterprise = []
td-test = ["dummy", "mock-env", "test-utils"]
dummy = []
mock-env = []
test-utils = []

[package.metadata.cargo-machete]
ignored = ["openssl"]

[dependencies]

# Internal dependencies

td-common = { workspace = true }

# External dependencies

serde = { workspace = true, features = ["derive"] }
strum = { workspace = true }
strum_macros = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true, features = ["vendored"] }